--- a/src/planning/package.xml
+++ b/src/planning/package.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0"?>
 <package format="2">
-  <name>object_movement</name>
+  <name>planning</name>
   <version>0.0.0</version>
-  <description>A package for loading a simulated object environment into Gazebo, with randomized movement.</description>
+  <description>A package for path planning to track and follow a moving object.</description>
 
   <maintainer email="ayush.jain@berkeley.edu">Ayush Jain</maintainer>
 
@@ -13,23 +13,26 @@
 
   <buildtool_depend>catkin</buildtool_depend>
   <build_depend>geometry_msgs</build_depend>
-  <build_depend>intera_interface</build_depend>
+  <build_depend>baxter_interface</build_depend>
   <build_depend>moveit_msgs</build_depend>
+  <build_depend>baxter_core_msgs</build_depend>
   <build_depend>roscpp</build_depend>
   <build_depend>rospy</build_depend>
   <build_depend>std_msgs</build_depend>
   <build_depend>tf2_ros</build_depend>
   <build_export_depend>geometry_msgs</build_export_depend>
-  <build_export_depend>intera_interface</build_export_depend>
+  <build_export_depend>baxter_interface</build_export_depend>
   <build_export_depend>moveit_msgs</build_export_depend>
+  <build_export_depend>baxter_core_msgs</build_export_depend>
   <build_export_depend>roscpp</build_export_depend>
   <build_export_depend>rospy</build_export_depend>
   <build_export_depend>std_msgs</build_export_depend>
   <build_export_depend>tf2_ros</build_export_depend>
   <exec_depend>baxter_tools</exec_depend>
   <exec_depend>geometry_msgs</exec_depend>
-  <exec_depend>intera_interface</exec_depend>
+  <exec_depend>baxter_interface</exec_depend>
   <exec_depend>moveit_msgs</exec_depend>
+  <exec_depend>baxter_core_msgs</exec_depend>
   <exec_depend>roscpp</exec_depend>
   <exec_depend>rospy</exec_depend>
   <exec_depend>std_msgs</exec_depend>
