--- a/src/rviz_animator/package.xml
+++ b/src/rviz_animator/package.xml
@@ -23,6 +23,7 @@
 
   <export>
       <rosdoc config="${prefix}/rosdoc.yaml"/>
-      <rviz plugin="${prefix}/plugin_description.xml"/>
+      <rviz plugin="${prefix}/avc_plugin_description.xml"/>
+      <rviz plugin="${prefix}/kt_plugin_description.xml"/>
   </export>
 </package>
