--- a/src/rviz_animator/package.xml
+++ b/src/rviz_animator/package.xml
@@ -15,6 +15,9 @@
   <build_depend>qtbase5-dev</build_depend>
   <build_depend>rviz</build_depend>
   <build_depend>message_generation</build_depend>
+  <build_depend>kdl_parser</build_depend>
+  
+  <run_depend>kdl_parser</run_depend>
   <run_depend>message_runtime</run_depend>
   <run_depend>libqt5-core</run_depend>
   <run_depend>libqt5-gui</run_depend>
