urdf modifications, urdf package tbd

--- a/src/rviz_animator/CMakeLists.txt
+++ b/src/rviz_animator/CMakeLists.txt
@@ -68,6 +68,7 @@ add_library(${PROJECT_NAME} ${SRC_FILES})
 ## library and names the actual file something like
 ## "librviz_plugin_tutorials.so", or whatever is appropriate for your
 ## particular OS.
+add_dependencies(${PROJECT_NAME} ${${PROJECT_NAME}_EXPORTED_TARGETS})
 target_link_libraries(${PROJECT_NAME} ${QT_LIBRARIES} ${catkin_LIBRARIES})
 ## END_TUTORIAL
 
