--- a/src/obj_tracking/package.xml
+++ b/src/obj_tracking/package.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0"?>
 <package format="2">
-  <name>aruco_pkg</name>
+  <name>obj_tracking</name>
   <version>0.0.0</version>
-  <description>The aruco_pkg package</description>
+  <description>The obj_tracking package</description>
 
   <!-- One maintainer tag required, multiple allowed, one person per tag -->
   <!-- Example:  -->
